# books-catalog-drf

./: README.md  pyproject.toml
app/: admin.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_review_user.py
client/: package.json  pnpm-lock.yaml  prettier.config.js
client/src/: App.tsx
project/: settings.py  urls.py
scripts/: setup_mock_data.py
